<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rAddModuleInner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    >
    <include layout="@layout/toolbar"/>
    <ImageView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/toolbar_dropshadow" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <EditText
            android:id="@+id/edtRemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textSize="25sp"
            android:textColor="@color/secondaryText"
            android:inputType="textCapWords"
            android:hint="@string/reminder_title_hint"
            android:textColorHint="@color/hint"
            android:imeOptions="flagNoExtractUi"
            />
        <EditText
            android:id="@+id/edtRemNote"
            android:layout_below="@+id/edtRemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textSize="18sp"
            android:textColor="@color/secondaryText"
            android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
            android:lines="6"
            android:minLines="3"
            android:gravity="top|left"
            android:maxLines="6"
            android:scrollbars="vertical"
            android:hint="@string/reminder_note_hint"
            android:imeOptions="flagNoExtractUi"
            android:textColorHint="@color/hint"
            />
        <TextView
            android:id="@+id/txtTimeTitle"
            android:layout_below="@id/edtRemNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_time"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/primaryText"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_marginBottom="4dp"
            android:paddingRight="25dp"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/txtTimeHint"
            android:layout_below="@id/txtTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_time_hint"
            android:layout_marginLeft="16dp"
            android:textSize="12sp"
            />
        <RelativeLayout
            android:id="@+id/datetimeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTimeHint"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            >

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/txtTime"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:hint="@string/reminder_datePicker"
                />
            <TextView
                android:id="@+id/txtTime"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingRight="50dp"
                android:textSize="16sp"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:hint="@string/reminder_timePicker"
                />
            <TextView
                android:id="@+id/txtRepetition"
                android:layout_below="@id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/primaryText"
                android:textSize="18sp"
                android:paddingRight="16dp"
                android:text="@string/reminder_repetition"
                />
            <LinearLayout
                android:focusable="true" android:focusableInTouchMode="true"
                android:layout_width="0px" android:layout_height="0px"/>
            <EditText
                android:id="@+id/edtRepeatAmount"
                android:layout_toRightOf="@id/txtRepetition"
                android:layout_alignBottom="@id/txtRepetition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:text="0"
                android:cursorVisible="false"
                android:maxLength="1"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"

                />

            <Spinner
                android:id="@+id/repetitonOpt"
                android:layout_toRightOf="@id/edtRepeatAmount"
                android:layout_alignTop="@id/txtRepetition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/time_options"
                />
            </RelativeLayout>
    <TextView
        android:id="@+id/txtType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datetimeContainer"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:text="@string/select_type"
        />
    <CheckBox
        android:id="@+id/chkArriving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/datetimeContainer"
        android:layout_toRightOf="@+id/txtType"
        android:layout_marginLeft="-5dp"
        android:text="@string/chk_arriving" />

    <CheckBox
        android:id="@+id/chkLeaving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/datetimeContainer"
        android:layout_toRightOf="@+id/chkArriving"
        android:text="@string/chk_leaving" />
    <TextView
        android:id="@+id/txtLocation"
        android:layout_below="@+id/txtType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:text="@string/select_location"
        />
    <RelativeLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E3E7EA"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/txtLocation"
        >
        <Button
            android:id="@+id/btn_saved"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:padding="20dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/btn_select_location"/>
        <Button
            android:id="@+id/btn_add_location"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:padding="20dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:layout_alignTop="@+id/btn_add_reminder"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/primaryText"
            android:text="@string/btn_add_new_location"
            />

    </RelativeLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>