<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main_fragment_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    >
    <de.timroes.android.listview.EnhancedListView
        android:drawSelectorOnTop="true"
        android:id="@+id/lstReminders"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="3dp"
        android:background="#F44336"
        android:divider="@color/divider"
        android:dividerHeight="1dp"
        />
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_welcome"
        android:layout_below="@id/lstReminders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="13dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="3dp"
        android:visibility="gone"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="#fff"
            >
        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textColor="@color/primary"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="24sp"
            android:layout_marginBottom="16dp"
            />
        <TextView
            android:id="@+id/welcome_content"
            android:layout_below="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_content"
            android:textColor="@color/primaryText"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="16sp"
            android:layout_marginBottom="48dp"
            />
            <View
                android:id="@+id/divider"
                android:layout_below="@+id/welcome_content"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#eee"/>
            <Button
                android:id="@+id/btn_add_reminder"
                android:layout_below="@+id/divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:textSize="14sp"
                android:text="@string/welcome_add_reminder"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/btn_add_location"
                android:layout_below="@+id/divider"
                android:layout_toRightOf="@+id/btn_add_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp"
                android:textColor="@color/accent"
                android:text="@string/welcome_add_location"
                style="?android:attr/borderlessButtonStyle"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_add_content"
        android:padding="10dp"
        />
</RelativeLayout>